// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders another correctly 1`] = `
<a
  className="normal"
  href="https://dotnetsharing.wordpress.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  My personal blog
</a>
`;

exports[`renders correctly 1`] = `
<a
  className="normal"
  href="https://github.com/mikenguyen69?tab=repositories"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  My Github
</a>
`;
